--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=DebounceEvent
-version=1.0.0
+version=1.1.0
 author=Xose Pérez <xose.perez@gmail.com>
 maintainer=Xose Pérez <xose.perez@gmail.com>
-sentence=Simple button debounce event with support for single, double and long clicks
-paragraph=Simple button debounce event with support for single, double and long clicks
+sentence=Simple push button and toggle switches debounce event with support for single, double and long clicks
+paragraph=Simple push button and toggle switches debounce event with support for single, double and long clicks
 category=Other
 url=https://bitbucket.org/xoseperez/debounceevent.git
 architectures=*
