--- a/library.properties
+++ b/library.properties
@@ -2,8 +2,8 @@ name=DebounceEvent
 version=2.0.0
 author=Xose Pérez <xose.perez@gmail.com>
 maintainer=Xose Pérez <xose.perez@gmail.com>
-sentence=Simple push button and toggle switches debounce event with support for single, double and long clicks
-paragraph=Simple push button and toggle switches debounce event with support for single, double and long clicks
+sentence=Simple push button and toggle switch debounce library that reports number of clicks and length
+paragraph=Simple push button and toggle switch debounce library that reports number of clicks and length
 category=Other
 url=https://bitbucket.org/xoseperez/debounceevent.git
 architectures=*
