Update license to LGPL-3.0, improved support for Arduino IDE

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,10 @@
 name=DebounceEvent
-version=2.0.1
+version=2.0.2
 author=Xose Pérez <xose.perez@gmail.com>
 maintainer=Xose Pérez <xose.perez@gmail.com>
 sentence=Simple push button and toggle switch debounce library that reports number of clicks and length
-paragraph=Simple push button and toggle switch debounce library that reports number of clicks and length
-category=Other
+paragraph=
+category=Signal Input/Output
 url=https://bitbucket.org/xoseperez/debounceevent.git
-architectures=*
+architectures=esp8266
+includes=DebounceEvent.h
