--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
-.pio*
+# Precompiled Headers
 *.gch
-test
+*.pch
+
+# PlatformIO folders
+.pio*
+
+# Documentation
+docs/*
+
+# Credentials
+credentials.h
