--- a/library.properties
+++ b/library.properties
@@ -5,6 +5,6 @@ maintainer=Xose Pérez <xose.perez@gmail.com>
 sentence=Simple push button and toggle switch debounce library that reports number of clicks and length
 paragraph=
 category=Signal Input/Output
-url=https://bitbucket.org/xoseperez/debounceevent.git
+url=https://bitbucket.org/xoseperez/debounceevent
 architectures=esp8266
 includes=DebounceEvent.h
