Support for AVR platform

--- a/examples/debounceevent_basic/platformio.ini
+++ b/examples/debounceevent_basic/platformio.ini
@@ -8,3 +8,8 @@ board = d1_mini
 framework = arduino
 upload_speed = 460800
 monitor_speed = 115200
+
+[env:leonardo]
+platform = atmelavr
+board = leonardo
+framework = arduino
