Added touch button support

--- a/library.properties
+++ b/library.properties
@@ -1,6 +1,6 @@
 name=DebounceEvent
-version=2.0.4
-author=Xose Pérez <xose.perez@gmail.com>
+version=3.0.0
+author=Xose Pérez <xose.perez@gmail.com>, Arjan Mels 
 maintainer=Xose Pérez <xose.perez@gmail.com>
 sentence=Simple push button and toggle switch debounce library that reports number of clicks and length
 paragraph=
