Add ESP32 compatibility

--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 name=DebounceEvent
-version=2.0.5
+version=2.0.6
 author=Xose Pérez <xose.perez@gmail.com>
 maintainer=Xose Pérez <xose.perez@gmail.com>
 sentence=Simple push button and toggle switch debounce library that reports number of clicks and length
 paragraph=
 category=Signal Input/Output
 url=https://github.com/xoseperez/debounceevent
-architectures=avr,esp8266
+architectures=avr,esp8266,esp32
 includes=DebounceEvent.h
